--- a/PZ1/Poligon.xaml
+++ b/PZ1/Poligon.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Poligon" Height="450" Width="450">
     <Grid Background="Pink">
-        <Label Content="Debljina konturne linije:" FontWeight="Bold" HorizontalAlignment="Left" Margin="51,51,0,0" VerticalAlignment="Top"/>
+        <Label Content="Debljina zute konturne linije:" FontWeight="Bold" HorizontalAlignment="Left" Margin="51,51,0,0" VerticalAlignment="Top"/>
         <Label Content="Boja poligona: " FontWeight="Bold" HorizontalAlignment="Left" Margin="53,112,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.519,-0.281"/>
         <Label Content="Tekst unutar poligona(opciono): " FontWeight="Bold" HorizontalAlignment="Left" Margin="51,236,0,0" VerticalAlignment="Top"/>
         <Label Content="Boja teksta(opciono): " FontWeight="Bold" HorizontalAlignment="Left" Margin="53,281,0,0" VerticalAlignment="Top"/>
